# AoC2017

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  solve.sh
cmake/: clang-format.cmake
inputs/: mkdirs.sh
src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  main.cpp  solver.cpp  util.cpp
test/: CMakeLists.txt  README.md  day01_test.cpp  day02_test.cpp  day03_test.cpp  day04_test.cpp  day05_test.cpp  day06_test.cpp  day07_test.cpp  day08_test.cpp  day09_test.cpp  day10_test.cpp  day11_test.cpp  day12_test.cpp  day13_test.cpp  day14_test.cpp  day15_test.cpp  day16_test.cpp  day17_test.cpp  day18_test.cpp  day19_test.cpp  day20_test.cpp  day21_test.cpp  day22_test.cpp  day23_test.cpp  day24_test.cpp  day25_test.cpp
